create user applications flow

--- a/src/app/user/user-applications/user-applications.component.html
+++ b/src/app/user/user-applications/user-applications.component.html
@@ -1,10 +1,11 @@
 <md-card class="app-card-content md_card_app">
     <md-card-content>
-        <md-input-container class="example-full-width">
+        <md-input-container class="example-full-width"
+            color="accent">
             <input mdInput
                 color="accent"
-                type="search"
-                placeholder="Nombre"
+                placeholder="Aplicacion"
+                (keyup)="onKey($event.target.value)"
                 maxlength="50">
         </md-input-container>
         <md-list>
