administration of users

--- a/src/app/retry/batch-transaction/batch-transaction.component.html
+++ b/src/app/retry/batch-transaction/batch-transaction.component.html
@@ -51,3 +51,5 @@
     <md-card-actions align="end">
     </md-card-actions>
 </md-card>
+{{transactionsSent | json}}
+{{transactionsCompleted | json}}
