--- a/src/app/retry/retry-history/retry-history.component.html
+++ b/src/app/retry/retry-history/retry-history.component.html
@@ -5,7 +5,7 @@
 <div class="card-container">
     <md-card class="search md_card_app">
         <md-card-title>{{'app.retry.filter' | translate}}</md-card-title>
-        <md-divider></md-divider>
+        <md-divider class="divider"></md-divider>
 
         <md-card-content class="flex_container">
             <form (ngSubmit)="onSubmit()"
