--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,3 +1,6 @@
+<md-progress-bar mode="indeterminate"
+            color="accent"
+            *ngIf="isLogging"></md-progress-bar>
 <div class="box">
     <div class="header">
         <div id="cont-lock"><i color="accent"
@@ -5,7 +8,7 @@
         <div id="bottom-head">
             <h1 id="logintoregister">Login</h1></div>
     </div>
-    <form [formGroup]="form">
+    <form [formGroup]="form">        
         <div class="container_Login">
             <md-input-container color="accent">
                 <input mdInput
