--- a/src/app/user/user-applications/user-applications.component.html
+++ b/src/app/user/user-applications/user-applications.component.html
@@ -1,20 +1,20 @@
 <md-card class="app-card-content md_card_app">
+    <md-card-title *ngIf="userName">{{'app.user.userApplication' | translate}} - {{ userName }}</md-card-title>
     <md-card-content>
-        <md-input-container class="example-full-width"
+        <!--<md-input-container class="example-full-width"
             color="accent">
             <input mdInput
                 color="accent"
                 placeholder="Aplicacion"
                 (keyup)="onKey($event.target.value)"
                 maxlength="50">
-        </md-input-container>
+        </md-input-container>-->
         <md-list>
-            <md-list-item *ngFor="let user of usersResult">
-                <h3 md-line>{{user.Name}}</h3>
-                <md-icon (click)="addUserAdministrator(user)"
-                    class="add"
-                    mdTooltip="{{'app.user.addTooltip' | translate}}"
-                    [mdTooltipPosition]="'above'">add</md-icon>
+            <md-list-item *ngFor="let application of applications">
+                <md-checkbox class="example-margin"
+                    [checked]="isApplicationUser(application)"
+                    (change)="clickApplication(application, $event.checked)"></md-checkbox>
+                <h3 md-line>{{application.name}}</h3>
             </md-list-item>
         </md-list>
     </md-card-content>
