--- a/src/app/master/service/service-detail/service-detail.component.html
+++ b/src/app/master/service/service-detail/service-detail.component.html
@@ -86,7 +86,7 @@
             [hidden]="!form.get('verCode').value">
             <input mdInput
                 type="text"
-                [readonly]="readOnly"
+                [readonly]="true"
                 placeholder="{{'app.master.service.verCode' | translate}}"
                 formControlName="verCode"
                 maxlength="500"
