--- a/src/app/retry/batch-transaction/batch-transaction.component.html
+++ b/src/app/retry/batch-transaction/batch-transaction.component.html
@@ -7,6 +7,7 @@
             mdTooltip="{{'app.common.close' | translate}}">close</md-icon>
     </md-card-title>
     <md-card-content>
+
         <div class="container_actions">
             <md-select placeholder="{{'app.common.actions' | translate}}"
                 color="accent"
@@ -25,13 +26,34 @@
                 <md-icon>{{ selectedAction }}</md-icon>
             </button>
         </div>
+        <md-progress-bar mode="indeterminate"
+            color="accent"
+            *ngIf="isSendingBulk"></md-progress-bar>
         <p-dataTable [value]="transactions"
             dataKey="id">
             <p-header>{{'app.retry.selectedTransactions' | translate}}</p-header>
 
-            <p-column field="msgId"
+            <p-column field="idIIB"
+                [style]="{'width':'100px', 'font-weight': 'bold','color':'black'}"
+                header="{{'app.retry.results.iib' | translate}}"></p-column>
+            <p-column field="UUID"
+                [style]="{'width':'100px', 'font-weight': 'bold','color':'black'}"
+                header="{{'app.retry.results.uuid' | translate}}"></p-column>
+            <p-column field="consumer"
                 [style]="{'width':'100px'}"
+                header="{{'app.retry.results.consumer' | translate}}"></p-column>
+            <p-column field="msgId"
+                [style]="{'width':'100px', 'font-weight': 'bold','color':'black'}"
                 header="{{'app.retry.results.messageId' | translate}}"></p-column>
+            <p-column field="recieveDate"
+                [style]="{'width':'100px'}"
+                header="{{'app.retry.results.receiveDate' | translate}}"></p-column>
+            <p-column field="start"
+                [style]="{'width':'100px'}"
+                header="{{'app.retry.results.initialDate' | translate}}"></p-column>
+            <p-column field="end"
+                [style]="{'width':'100px'}"
+                header="{{'app.retry.results.finalDate' | translate}}"></p-column>
             <p-column field="errorType"
                 [style]="{'width':'100px'}"
                 header="{{'app.retry.results.errorType' | translate}}"></p-column>
@@ -45,11 +67,10 @@
                         mdAutosizeMinRows="4">{{ transaction[col.field] }}</textarea>
 
                 </ng-template>
+
             </p-column>
         </p-dataTable>
     </md-card-content>
     <md-card-actions align="end">
     </md-card-actions>
 </md-card>
-{{transactionsSent | json}}
-{{transactionsCompleted | json}}
