--- a/src/app/master/service/service/service.component.html
+++ b/src/app/master/service/service/service.component.html
@@ -1,3 +1,6 @@
+<md-toolbar class="toolbar_header">
+    <font color="white">{{'app.master.service.title'|translate}}</font>
+</md-toolbar>
 <!--<md-toolbar class="toolbar_header">
     <font color="white">{{'app.master.service.title' | translate}}</font>
 </md-toolbar>
