--- a/src/app/report/report/report.component.html
+++ b/src/app/report/report/report.component.html
@@ -1,3 +1,6 @@
+<md-toolbar class="toolbar_header">
+    <font color="white">{{'app.report.title'|translate}}</font>
+</md-toolbar>
 <md-progress-bar mode="indeterminate"
     color="accent"
     *ngIf="isChargingInitialData"></md-progress-bar>
