--- a/src/app/retry/admin-retry/admin-retry.component.scss
+++ b/src/app/retry/admin-retry/admin-retry.component.scss
@@ -74,3 +74,17 @@ md-spinner.retry {
 td span{
     color:black;
 }
+
+.spanwrap{
+    display:block;
+    width:90px;
+    word-wrap:break-word;
+}
+
+.textAreaScroll{
+    height: 60px;
+}
+
+.buttonClear{
+    margin: 5px;
+}
