--- a/src/app/retry/batch-transaction/batch-transaction.component.scss
+++ b/src/app/retry/batch-transaction/batch-transaction.component.scss
@@ -30,3 +30,13 @@ md-card {
     margin: 12px;
     flex: 1;
 }
+
+.textAreaScroll{
+    height: 60px;
+}
+
+.spanwrap{
+    display:block;
+    width:90px;
+    word-wrap:break-word;
+}
