--- a/src/app/retry/retry-history/retry-history.component.html
+++ b/src/app/retry/retry-history/retry-history.component.html
@@ -1,3 +1,6 @@
+<md-toolbar class="toolbar_header">
+    <font color="white">{{'app.retry.history.title'|translate}}</font>
+</md-toolbar>
 <md-progress-bar mode="indeterminate"
     color="accent"
     *ngIf="isChargingInitialData">
@@ -10,27 +13,34 @@
         <md-card-content class="flex_container">
             <form (ngSubmit)="onSubmit()"
                 [formGroup]="form">
+
+                <span style="color:red">*</span>
                 <md-select placeholder="{{'app.retry.applications' | translate}}"
                     class="item"
                     color="accent"
                     (change)="onSelectApplication($event.value)"
                     formControlName="application">
+                    <md-option [value]="-1">{{'app.common.select' | translate}}</md-option>
                     <md-option *ngFor="let application of applications"
                         [value]="application.id">{{ application.name }}</md-option>
                 </md-select>
+                <span style="color:red">*</span>
                 <md-select placeholder="{{'app.retry.services' | translate}}"
                     class="item"
                     color="accent"
                     (change)="onSelectService($event.value)"
                     formControlName="serviceControl">
+                    <md-option [value]="-1">{{'app.common.select' | translate}}</md-option>
                     <md-option *ngFor="let service of servicesOut"
                         [value]="service.id">{{ service.name }}
                     </md-option>
                 </md-select>
+                <span style="color:red">*</span>
                 <md-select placeholder="{{'app.retry.operations' | translate}}"
-                    class="item"
+                    class="item button"
                     color="accent"
                     formControlName="operation">
+                    <md-option [value]="">{{'app.common.select' | translate}}</md-option>
                     <md-option *ngFor="let operation of operations"
                         [value]="operation.id">{{ operation.opration }}</md-option>
                 </md-select>
@@ -38,6 +48,7 @@
                     class="item"
                     color="accent"
                     formControlName="consumer">
+                    <md-option [value]="''">{{'app.common.select' | translate}}</md-option>
                     <md-option *ngFor="let consumer of consumers"
                         [value]="consumer">{{ consumer }}
                     </md-option>
@@ -45,15 +56,15 @@
                 <md-input-container class="item"
                     color="accent">
                     <input mdInput
-                        type="number"
+                        type="text"
                         placeholder="{{'app.retry.message' | translate}}"
-                        formControlName="messageId"
-                        maxlength="10">
+                        formControlName="messageId">
                 </md-input-container>
 
                 <md-input-container color="accent"
                     class="date_picker">
                     <input mdInput
+                    [readonly]="true"
                         [mdDatepicker]="resultPickerInitial"
                         formControlName="initialDate"
                         [min]="minDate"
@@ -70,8 +81,10 @@
                 </md-datepicker>
 
                 <md-input-container color="accent"
-                    class="date_picker">
+                    class="date_picker"
+                    >
                     <input mdInput
+                    [readonly]="true"
                         [mdDatepicker]="resultPicker"
                         formControlName="finalDate"
                         [min]="minDate"
@@ -92,6 +105,16 @@
         <md-card-actions align="end">
             <button md-mini-fab
                 type="button"
+                class="buttonClear"
+                (click)="clearFilter()"
+                [disabled]="!form.dirty"
+                color="primary"
+                mdTooltip="{{'app.common.clearFilters' | translate}}">
+                <md-icon class="">delete_sweep</md-icon>
+            </button>
+            <button md-mini-fab
+                type="button"
+                class="buttonClear"
                 (click)="onSearch()"
                 [disabled]="(isSearching || !form.controls.application.value || !form.controls.serviceControl.value || !form.controls.operation.value)"
                 color="primary"
@@ -117,7 +140,15 @@
                 <p-header>{{'app.retry.transactions' | translate}}</p-header>
                 <p-column field="idIIB"
                     [style]="{'width':'100px', 'font-weight': 'bold','color':'black'}"
-                    header="{{'app.retry.results.iib' | translate}}"></p-column>
+                    header="{{'app.retry.results.iib' | translate}}">
+                    <ng-template let-col
+                        let-transaction="rowData"
+                        pTemplate="body">
+                        <div>
+                            <span class="spanwrap">{{ transaction[col.field] }}</span>
+                        </div>
+                    </ng-template>
+                </p-column>
                 <p-column field="UUID"
                     [style]="{'width':'100px', 'font-weight': 'bold','color':'black'}"
                     header="{{'app.retry.results.uuid' | translate}}"></p-column>
@@ -126,7 +157,15 @@
                     header="{{'app.retry.results.consumer' | translate}}"></p-column>
                 <p-column field="msgId"
                     [style]="{'width':'100px', 'font-weight': 'bold','color':'black'}"
-                    header="{{'app.retry.results.messageId' | translate}}"></p-column>
+                    header="{{'app.retry.results.messageId' | translate}}">
+                    <ng-template let-col
+                        let-transaction="rowData"
+                        pTemplate="body">
+                        <div>
+                            <span class="spanwrap">{{ transaction[col.field] }}</span>
+                        </div>
+                    </ng-template>
+                </p-column>
                 <p-column field="recieveDate"
                     [style]="{'width':'100px'}"
                     header="{{'app.retry.results.receiveDate' | translate}}"></p-column>
@@ -146,6 +185,7 @@
                         let-transaction="rowData"
                         pTemplate="body">
                         <textarea mdInput
+                            class="textAreaScroll"
                             mdAutosizeMinRows="4">{{ transaction[col.field] }}</textarea>
 
                     </ng-template>
